--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+.settings/org.eclipse.wst.validation.prefs
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+.settings/org.eclipse.wst.common.project.facet.core.xml
+.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+.settings/org.eclipse.wst.common.component
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.jpt.core.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/.jsdtscope
+.project
+.classpath
